<resources>
    <string name="app_name">StajOkuluProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="signin">Kayıt Ol</string>
    <string name="previous">Previous</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone">Telefon Numarası</string>
    <string name="spinner">Seçiniz</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="donation">Bağış Yap</string>
    <string name="no_donation">Bağış Al</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="scroolview">Our privacy practices are summarized here. Under this Policy, Safety Media:

collects personal information when you use our website, make inquiries and place orders with us and in the course of delivering our services;
shares personal information with Commercial Fire and Safety when you place an order for Commercial Fire and Safety’s C20/20 software, products or services.
shares this information with third-party service providers (including Amazon, Freshworks, Google, Datto, Moneris and TD Merchant Services) for the purposes of administering, hosting and supporting our website, customer support platform, email and computers system and for processing your payments;
collects, uses and discloses this information to provide our products and services;
except as set out in (2) - (4), does not share your personal information with third parties without your consent unless authorized or required by law, as part of the sale of a business or as disclosed to you when the information is collected;
retains your personal information in compliance with our legal obligations;
allows you to withdraw your consent to the collection, storage, use and disclosure of your personal information at any time;
mitigates the risk and impact of potential harms involved in the disclosure of personal information through the adoption of reasonable physical, technical and organizational procedures appropriate to the sensitivity of the data in an effort to safeguard the personal information you provide to us; and
provides you with updates if there are any changes to this Privacy Policy and our privacy practices through announcements on our website.
The service providers with whom Safety Media may share your personal information include service providers operating outside Canada including in the United States of America and India. Your personal information may be accessible to law enforcement and national security authorities in the jurisdictions in which Safety Media’s service providers are located.

Even with physical, technical and organizational measures adopted by Safety Media to safeguard your personal information, there is a residual risk of the loss of, unauthorized access to or unauthorized disclosure of your information which could result in financial or other harm to you.

Further information with respect to our privacy practices is set out below.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="guncelle">Guncelle</string>
</resources>